# mxgap

./: LICENSE  MANIFEST.in  README.md  requirements.txt  setup.cfg  setup.py
.github/workflows/: python_tests.yaml
mxgap/: ML.py  __init__.py  cli.py  dos.py  features.py  input.py  structure.py  utils.py
mxgap/models/: MODELS_LIST.txt  NORM_INFO.txt  README.md
mxgap/models/models/: GBC  GBC_notDOS  GBR  GBR_edges  GBR_edges_notDOS  GBR_notDOS  GBR_onlygap  GBR_onlygap_notDOS  KRR  KRR_edges  KRR_edges_notDOS  KRR_notDOS  KRR_onlygap  KRR_onlygap_notDOS  LR  LR_notDOS  MLPC  MLPC_notDOS  MLPR  MLPR_edges  MLPR_edges_notDOS  MLPR_notDOS  MLPR_onlygap  MLPR_onlygap_notDOS  RFC_notDOS  SVC  SVC_notDOS  SVR  SVR_edges  SVR_edges_notDOS  SVR_notDOS  SVR_onlygap  SVR_onlygap_notDOS
mxgap/test/: test_.py
mxgap/test/examples/La2C1Cl2/: CONTCAR  contcar_array.npy  doscar_array.npy  mxgap.info  test_info.txt
mxgap/test/examples/La2C1N2H2/: CONTCAR  contcar_array.npy  doscar_array.npy  mxgap.info  mxlearning.info  test_info.txt
mxgap/test/examples/La2C1Te2/: CONTCAR  contcar_array.npy  doscar_array.npy  mxgap.info  mxlearning.info  test_info.txt
mxgap/test/examples/La3C2O2H2/: CONTCAR  contcar_array.npy  doscar_array.npy  mxgap.info  mxlearning.info  test_info.txt
mxgap/test/examples/La3C2S2/: CONTCAR  contcar_array.npy  doscar_array.npy  mxgap.info  mxlearning.info  test_info.txt
mxgap/test/examples/La3N2H2/: CONTCAR  contcar_array.npy  doscar_array.npy  mxgap.info  mxlearning.info  test_info.txt
tutorials/: DOSCAR  geometry.in  tutorials.ipynb
(+18 files in other folders)
