[metadata]
name = mxgap
version = 0.5
description = ML models to predict terminated MXene bandgaps.
long_description = file: README.md
long_description_content_type = text/markdown
author = Diego Ontiveros
author_email = diego.ontiveros@ub.edu
url = https://github.com/diegonti/mxgap
license = MIT
license_file = LICENSE
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Chemistry
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
package_dir =
    mxgap = mxgap
include_package_data = True
install_requires =
    scikit-learn==1.4.1.post1
    numpy
    ase
    pymatgen
    pytest
python_requires = >=3.9

[options.entry_points]
console_scripts =
    mxgap = mxgap.cli:cli
